               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances,

             • in course of this (corrupt BIN-files, not respected
               ‘n.records’) the output data frame was longer than the
               list of count values; corrected,

             • in some cases the grain number was not imported
               correctly; fixed.

         • ‘read_BIN2R()’

             • Behaviour while using the option ‘import = TRUE’ and
               ‘fastForward = TRUE’ have been improved. If both
               arguments are combined now only a single data frame with
               all information is returned.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • Single grain data had not been converted correctly to
               ‘RLum.Analysis’ objects.  Each grain within a position
               should represent one ‘RLum.Analysis’ object with a set
               of curve. This was so far not the case; corrected,

             • significant performance improvements, especially for big
               Risoe.BINfileData2RLum.Analysis() objects.

  Internals:

         • New internal function ‘.create_UID()’ added to create the
           unique identifier for RLum-objects. The new function reduces
           significantly the overhead while producing the objects.

         • Package 'digits' removed from the dependency list and the
           functionality (creating a unique identifier for
           RLum-objects) was implemented using a self-written function.

         • Package 'rgl' was removed from suggests and replaced by the
           package 'plotly'.

         • Package 'RLumModel' added as suggested package.

         • Package 'RLumShiny' added as suggested package.

         • Package 'rmarkdown' added as suggested package.

         • Package 'pander' added as suggested package.

         • Package 'rstudioapi' added as suggested package.
