@@ -277,7 +277,9 @@
         \item the argument \code{n.records} was not respected under rare circumstances,
         \item in course of this (corrupt BIN-files, not respected \code{n.records}) the output data frame
         was longer than the list of count values; corrected,
-        \item in some cases the grain number was not imported correctly; fixed.
+        \item in some cases the grain number was not imported correctly; fixed,
+        \item new argument \code{verbose} added,
+        \item minor performance improvements.
       }
 
 
